--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.6",
     "firebase": "^9.20.0",
     "install": "^0.13.0",
+    "moment": "^2.30.1",
     "npm": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
