--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.3.6",
     "firebase": "^9.20.0",
+    "framer-motion": "^11.2.4",
     "install": "^0.13.0",
     "moment": "^2.30.1",
     "npm": "^10.5.2",
