--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.1.0",
     "react-otp-input": "^3.0.0",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^3.0.1",
     "redux-persist": "^6.0.0",
